# django-app-demo

./: README.md  pyproject.toml
src/django_app_demo/: apps.py  views.py
src/django_app_demo/templates/django_app_demo/: base.html  index.html
