[project]
authors = [{name = "Raniere Silva", email = "Raniere.CostadaSilva@gesis.org"}]
dependencies = []
name = "django-app-demo"
requires-python = ">= 3.11"
version = "0.1.0"

[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[tool.pixi.workspace]
channels = ["conda-forge"]
platforms = ["linux-64"]

[tool.pixi.pypi-dependencies]
django_app_demo = { path = ".", editable = true }

[tool.pixi.tasks]

[tool.pixi.dependencies]
django = ">=5.2,<6"
